# toluca

./: CODE_OF_CONDUCT.md  README.md  update-address-macos.sh
backend/: .env  .gitignore  Cargo.toml  Dockerfile  README.md
backend/src/: coderdao.rs  config.rs  discord.rs  ethereum.rs  github_app.rs  github_data.rs  ipfs.rs  main.rs  routes.rs
backend/src/coderdao/: lib.rs
backend/src/github_app/: lib.rs
contracts/: .env.example  .eslintrc  .gitignore  CoderDAOFlattened.sol  README.md  hardhat.config.js  package-lock.json  package.json  truffle-config.js
contracts/contracts/: CoderDAO.sol  CoderDAOToken.sol  CoderDAOV2.sol  GovernorTimelockCompoundUpgradeable.sol.bak  IGovernorTimelockUpgradeable.sol.bak
contracts/contracts/governance/: GovernorUpgradeable2.sol  IGovernorUpgradeable2.sol
contracts/contracts/governance/extensions/: GovernorCountingSimpleUpgradeable.sol  GovernorSettingsUpgradeable.sol  GovernorVotesQuorumFractionUpgradeable.sol  GovernorVotesUpgradeable.sol
contracts/deployments/: index.js
contracts/scripts/: deploy.js  list-proposals.js
contracts/test/: CoderDAO.js
frontend/: .eslintrc  .gitignore  Dockerfile  README.md  connectors.js  package-lock.json  package.json
frontend/abis/: CoderDAO.json  CoderDAOToken.json  CryptoDoggy.json  CryptoDoggyShop.json
frontend/components/: BuyButton.js  ColorModeSwitcher.js  Connect.js  DebugPanel.js  HomeGallery.js  Identity.js  Logo.js  NFT.js  NextChakraLink.js  Proposal copy.js  Proposal.js  ProposalContributionForm.js  ProposalForm.js  ProposalProgress.js  ProposalTimeline.js  ProposalVoteStatus.js  ProposalVoting.js  ProposalVotingSummary.js  TimelineRow.js  VoteButton.js  VotingHistory.js
frontend/components/core/: Article.js  Network.jsx
frontend/constants/: index.js
frontend/contexts/: index.js
frontend/pages/: App.css  _app.js  _document.js  _theme.js  index.js
frontend/pages/api/: buy.js  buy.js.bak  propose.js
frontend/pages/nft/: [id].js
frontend/pages/proposals/: [id].js  propose.js
frontend/utils/: events.js  index.js  proposal.js  proposalId.js  vote.js
github-app/: LICENSE  README.md  index.js  package-lock.json  package.json
