[package]
name = "toluca"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
hex-literal = "0.3.4"
rocket = "0.5.0-rc.2"
serde_json = "1.0.83"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
web3 = "0.18.0"
