[package]
name = "toluca"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.9.0"
hex-literal = "0.3.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.83"
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "builder"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
web3 = "0.18.0"
envy = "0.4"
hex = "0.4.2"
ethabi = "14.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.7"
humantime = "1"
log = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
nom_pem = "4"
hyper = "0.14"
bytes = "1"
http-body-util = { git = "https://github.com/hyperium/http-body", rev = "6d7dd17" }
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dependencies.hubcaps]
git = "https://github.com/softprops/hubcaps"
branch = "master"
default-features = false
features = ["rustls-tls", "jwt", "app"]

[dependencies.github-types]
git = "https://github.com/jasonwhite/github-types"
branch = "master"